[gd_scene load_steps=3 format=3 uid="uid://d2vytphai3cpp"]

[ext_resource type="Theme" uid="uid://7yhqtiwbm0pj" path="res://resources/Themes/popup_menu_custom.tres" id="1_hjevh"]
[ext_resource type="Script" uid="uid://c5ivsfkk40sw4" path="res://scenes/TagScene/EditTagsScene.gd" id="1_oajq6"]

[node name="EditTagsScene" type="PopupPanel"]
size = Vector2i(500, 158)
visible = true
theme = ExtResource("1_hjevh")
script = ExtResource("1_oajq6")

[node name="MainContainer" type="VBoxContainer" parent="."]
offset_left = 5.0
offset_right = 495.0
offset_bottom = 158.0
alignment = 1

[node name="TagContainer" type="FlowContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 25

[node name="LineEdit" type="LineEdit" parent="MainContainer"]
layout_mode = 2
placeholder_text = "add new tag"

[node name="SaveChanges" type="Button" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Save Changes"

[connection signal="pressed" from="MainContainer/SaveChanges" to="." method="_on_save_changes_pressed"]
